# TCAN4550-py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
src/TCAN4550-py/: TCAN4x5x_Data_Structs.py  __init__.py  tcan4550.py
