[metadata]
name = TCAN4550-py
version = 0.0.0
license = MIT
description = This repository is to provide methods to easily control the TCAN4550 from Texas Instruments
long_description = file: README.rst
author = Merrick Rumel
author_email = merrick.rumel@gmail.com
classifiers=
   Development Status :: 3 - Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    spidev

[options.packages.find]
where=src